2011-04-28  Kenneth Russell  <kbr@google.com>

        Unreviewed test expectations update. Marked flaky and crashing tests.

        * platform/chromium/test_expectations.txt:

2011-04-28  Tony Chang  <tony@chromium.org>

        Fix description in recently added test results.

        * storage/indexeddb/mozilla/key-requirements-expected.txt:

2011-04-28  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Geoffrey Garen.

        Walk shadow hosts as well as parent nodes when finding opaque roots.
        https://bugs.webkit.org/show_bug.cgi?id=59571

        Remove expectation of failure.

        * platform/mac/fast/dom/shadow/gc-shadow-expected.txt: Removed.

2011-04-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Added the test results, missed in r85209.

        * platform/mac/fast/dom/shadow/gc-shadow-expected.txt: Added.

2011-04-28  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Brian Weinstein.

        Push canvas tests' expected results down from platform/mac and into platform/mac-snowleopard
        https://bugs.webkit.org/show_bug.cgi?id=59654

        * platform/mac-snowleopard/canvas/philip/tests/2d.gradient.radial.cone.front-expected.txt: Copied from LayoutTests/platform/mac/canvas/philip/tests/2d.gradient.radial.cone.front-expected.txt.
        * platform/mac-snowleopard/canvas/philip/tests/2d.gradient.radial.cone.top-expected.txt: Copied from LayoutTests/platform/mac/canvas/philip/tests/2d.gradient.radial.cone.top-expected.txt.
        * platform/mac-snowleopard/canvas/philip/tests/2d.strokeRect.zero.4-expected.txt: Copied from LayoutTests/platform/mac/canvas/philip/tests/2d.strokeRect.zero.4-expected.txt.
        * platform/mac/canvas/philip/tests/2d.gradient.radial.cone.front-expected.txt: Removed.
        * platform/mac/canvas/philip/tests/2d.gradient.radial.cone.top-expected.txt: Removed.
        * platform/mac/canvas/philip/tests/2d.strokeRect.zero.4-expected.txt: Removed.
